syntax = "proto3";

package pubsub;

import "google/protobuf/empty.proto";

option go_package = "VK/api/proto/pubsub";

// PubSub service definition
service PubSub {
  // Подписка (сервер отправляет поток событий)
  rpc Subscribe(SubscribeRequest) returns (stream Event);
  
  // Публикация (классический запрос-ответ)
  rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

// Subscribe request message
message SubscribeRequest {
  string key = 1;
}

// Publish request message
message PublishRequest {
  string key = 1;
  string data = 2;
}

// Event represents a message that was published
message Event {
  string data = 1;
} 